--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -3,6 +3,7 @@
   <ion-tab tabIcon="water" tabTitle="Pedidos" [root]="bPedidoPage" ></ion-tab>
   <ion-tab tabIcon="water" tabTitle="Envios" [root]="cEnvioPage"></ion-tab>
   <ion-tab tabIcon="water" tabTitle="Solicitud" [root]="dSolicitudPage"></ion-tab>
+  <ion-tab tabIcon="water" tabTitle="Discos" [root]="discoPage"></ion-tab>
 </ion-tabs>
 
 
@@ -10,4 +11,5 @@
   <ion-tab tabIcon="water" tabTitle="Solicitud" [root]="dSolicitudPage"></ion-tab>
   <ion-tab tabIcon="water" tabTitle="Recibido" [root]="eRecibidoPage"></ion-tab>
   <ion-tab tabIcon="water" tabTitle="Venta" [root]="fVentaPage"></ion-tab>
+  <ion-tab tabIcon="water" tabTitle="Discos" [root]="discoPage"></ion-tab>
 </ion-tabs>
