--- a/src/pages/sistema/transaccion/a-transaccion/a-transaccion.html
+++ b/src/pages/sistema/transaccion/a-transaccion/a-transaccion.html
@@ -78,6 +78,7 @@
                 <entrada #entrada 
                          [disabled]="!dtoTransaccion.enabled"
                          [tipo]="dtoTransaccion.tipoE"
+                         [tipoTransaccion]="tipoTransaccion"
                          (enter)="onEnterEntrada( $event, producto.codigoNext )"></entrada>
             </ion-col>
             <ion-col class="colTextArea">
