1ro: config electron generar instalador, 2do: modificacion estilo inventario, 3ro: evento cargando en espera del login

--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -2,7 +2,7 @@
   <ion-tab tabIcon="water" tabTitle="Productos" [root]="productoPage"></ion-tab>
   <ion-tab tabIcon="water" tabTitle="Pedidos" [root]="bPedidoPage" ></ion-tab>
   <ion-tab tabIcon="water" tabTitle="Entregas" [root]="cEnvioPage"></ion-tab>
-  <ion-tab tabIcon="water" tabTitle="Solicituds" [root]="dSolicitudPage"></ion-tab>
+  <ion-tab tabIcon="water" tabTitle="Solicitud" [root]="dSolicitudPage"></ion-tab>
   <ion-tab tabIcon="water" tabTitle="Discos" [root]="discoPage"></ion-tab>
 </ion-tabs>
 
