--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 <body>
 
   <!-- Ionic's root component and where the app will load -->
-  <ion-app></ion-app>
+  <ion-app><center><img src="assets/spinner.gif"></div></center></ion-app>
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
