--- a/src/pages/sistema/disco/disco.html
+++ b/src/pages/sistema/disco/disco.html
@@ -10,7 +10,7 @@
                 Actualizarse 
             </ion-card-header>
             <ion-item>    
-                <input type="file"  id="file" multiple (change)="files($event.target.files)">
+                <input type="file"  id="file" (change)="files($event.target.files)">
             </ion-item>
             <ion-item>
                 <button ion-button outline (click)="upload()">
@@ -27,9 +27,9 @@
             Descargar lo procesado
         </ion-card-header>
         <ion-item>
-            <button ion-button outline (click)="upload()">
+            <button ion-button outline (click)="download()">
                 <i class="pi pi-save"></i>
-                Cargar Actualizacion
+                Descargar 
             </button>
         </ion-item>
         <ion-item>
