--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -1,15 +1,15 @@
 <ion-tabs *ngIf="getTipo()=='ALMACEN'" tabsPlacement="bottom" color="cafe-claro" preloadTabs="false">
-  <ion-tab tabIcon="water" tabTitle="Productos" [root]="productoPage"></ion-tab>
-  <ion-tab tabIcon="water" tabTitle="Pedidos" [root]="bPedidoPage" ></ion-tab>
-  <ion-tab tabIcon="water" tabTitle="Entregas" [root]="cEnvioPage"></ion-tab>
-  <ion-tab tabIcon="water" tabTitle="Solicitud" [root]="dSolicitudPage"></ion-tab>
-  <ion-tab tabIcon="water" tabTitle="Discos" [root]="discoPage"></ion-tab>
+  <ion-tab #idProducto tabIcon="water" tabTitle="Productos" [root]="productoPage" (ionSelect)="onProductoPage()" ></ion-tab>
+  <ion-tab #idPedido tabIcon="water" tabTitle="Pedidos" [root]="bPedidoPage" (ionSelect)="onbPedidoPage()" ></ion-tab>
+  <ion-tab #idEnvio tabIcon="water" tabTitle="Entregas" [root]="cEnvioPage" (ionSelect)="oncEnvioPage()" ></ion-tab>
+  <ion-tab #idSolicitud tabIcon="water" tabTitle="Solicitud" [root]="dSolicitudPage" (ionSelect)="ondSolicitudPage()" ></ion-tab>
+  <ion-tab #idDisco tabIcon="water" tabTitle="Discos" [root]="discoPage" (ionSelect)="onDiscoPage()" ></ion-tab>
 </ion-tabs>
 
 
 <ion-tabs *ngIf="getTipo()!='ALMACEN'" tabsPlacement="bottom" color="cafe-claro" preloadTabs="false">
-  <ion-tab tabIcon="water" tabTitle="Solicitud" [root]="dSolicitudPage"></ion-tab>
-  <ion-tab tabIcon="water" tabTitle="Entregas" [root]="eRecibidoPage"></ion-tab>
-  <ion-tab tabIcon="water" tabTitle="Venta" [root]="fVentaPage"></ion-tab>
-  <ion-tab tabIcon="water" tabTitle="Discos" [root]="discoPage"></ion-tab>
+  <ion-tab #idSolicitud tabIcon="water" tabTitle="Solicitud" [root]="dSolicitudPage" (ionSelect)="ondSolicitudPage()" ></ion-tab>
+  <ion-tab #idRecibido tabIcon="water" tabTitle="Entregas" [root]="eRecibidoPage" (ionSelect)="oneRecibidoPage()" ></ion-tab>
+  <ion-tab #idVenta tabIcon="water" tabTitle="Venta" [root]="fVentaPage" (ionSelect)="onfVentaPage()" ></ion-tab>
+  <ion-tab #idDisco tabIcon="water" tabTitle="Discos" [root]="discoPage" (ionSelect)="onDiscoPage()" ></ion-tab>
 </ion-tabs>
