Conf:solicitudDestino, y correc en getValidaRespuesta

--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -2,7 +2,7 @@
   <ion-tab #idProducto tabIcon="water" tabTitle="Productos" [root]="productoPage" (ionSelect)="onProductoPage()" ></ion-tab>
   <ion-tab #idPedido tabIcon="water" tabTitle="Pedidos" [root]="bPedidoPage" (ionSelect)="onbPedidoPage()" ></ion-tab>
   <ion-tab #idEnvio tabIcon="water" tabTitle="Entregas" [root]="cEnvioPage" (ionSelect)="oncEnvioPage()" ></ion-tab>
-  <ion-tab #idSolicitud tabIcon="water" tabTitle="Solicitud" [root]="dSolicitudPage" (ionSelect)="ondSolicitudPage()" ></ion-tab>
+  <ion-tab #idSolicitudDestino tabIcon="water" tabTitle="Sol. Ver" [root]="dSolicitudDestinoPage" (ionSelect)="ondSolicitudDestinoPage()" ></ion-tab>
   <ion-tab #idDisco tabIcon="water" tabTitle="Discos" [root]="discoPage" (ionSelect)="onDiscoPage()" ></ion-tab>
 </ion-tabs>
 
