--- a/src/pages/sistema/transaccion/a-diferencia/a-diferencia.html
+++ b/src/pages/sistema/transaccion/a-diferencia/a-diferencia.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar color="cafe-claro">
+    <ion-navbar [color]="storageService.getAccesoResponse().tipo=='SUCURSAL'?'primary':'cafe-claro'">
         <ion-title>{{ 'Diferencia' }}</ion-title>
         <ion-buttons end>
             <button ion-button outline 
