--- a/src/pages/acceso/acceso.html
+++ b/src/pages/acceso/acceso.html
@@ -27,7 +27,7 @@
       
           </ion-list>
           <div style="text-align: right">
-            <button ion-button color="naranja-logo" (click)="onAcceso()" accesskey="g">Iniciar Sessión</button>
+            <button ion-button color="azulado" (click)="onAcceso()" accesskey="g">Iniciar Sessión</button>
           </div>
     </div>
 </ion-content>
