--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -8,8 +8,9 @@
 
 
 <ion-tabs *ngIf="getTipo()!='ALMACEN'" tabsPlacement="bottom" [color]="storageService.getAccesoResponse().tipo=='SUCURSAL'?'primary':'cafe-claro'" preloadTabs="false">
-  <ion-tab #idSolicitud tabIcon="water" tabTitle="Solicitud" [root]="dSolicitudPage" (ionSelect)="ondSolicitudPage()" ></ion-tab>
-  <ion-tab #idRecibido tabIcon="water" tabTitle="Entregas" [root]="eRecibidoPage" (ionSelect)="oneRecibidoPage()" ></ion-tab>
+  <!--ion-tab #idSolicitud tabIcon="water" tabTitle="Solicitud" [root]="dSolicitudPage" (ionSelect)="ondSolicitudPage()" ></ion-tab-->
+  <ion-tab #idEnvio tabIcon="water" tabTitle="Entregas" [root]="cEnvioPage" (ionSelect)="oncEnvioPage()" ></ion-tab>
+  <ion-tab #idRecibido tabIcon="water" tabTitle="Llegadas" [root]="eRecibidoPage" (ionSelect)="oneRecibidoPage()" ></ion-tab>
   <!--ion-tab #idVenta tabIcon="water" tabTitle="Venta" [root]="fVentaPage" (ionSelect)="onfVentaPage()" ></ion-tab-->
   <ion-tab #idBorrador tabIcon="water" tabTitle="Venta" [root]="gBorradorPage" (ionSelect)="ongBorradorPage()" ></ion-tab>
   <ion-tab #idAgrupador tabIcon="water" tabTitle="Agrupador" [root]="hAgrupadorPage" (ionSelect)="onhAgrupadorPage()" ></ion-tab>
