--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -2,7 +2,8 @@
   <ion-tab #idProducto tabIcon="water" tabTitle="Productos" [root]="productoPage" (ionSelect)="onProductoPage()" ></ion-tab>
   <ion-tab #idPedido tabIcon="water" tabTitle="Pedidos" [root]="bPedidoPage" (ionSelect)="onbPedidoPage()" ></ion-tab>
   <ion-tab #idEnvio tabIcon="water" tabTitle="Entregas" [root]="cEnvioPage" (ionSelect)="oncEnvioPage()" ></ion-tab>
-  <ion-tab #idSolicitudDestino tabIcon="water" tabTitle="Sol. Ver" [root]="dSolicitudDestinoPage" (ionSelect)="ondSolicitudDestinoPage()" ></ion-tab>
+  <ion-tab #idRecibido tabIcon="water" tabTitle="Llegadas" [root]="eRecibidoPage" (ionSelect)="oneRecibidoPage()" ></ion-tab>
+  <!--ion-tab #idSolicitudDestino tabIcon="water" tabTitle="Sol. Ver" [root]="dSolicitudDestinoPage" (ionSelect)="ondSolicitudDestinoPage()" ></ion-tab-->
   <ion-tab #idDisco tabIcon="water" tabTitle="Discos" [root]="discoPage" (ionSelect)="onDiscoPage()" ></ion-tab>
 </ion-tabs>
 
