--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -1,19 +1,19 @@
 <ion-tabs *ngIf="getTipo()=='ALMACEN'" tabsPlacement="bottom" color="cafe-claro" preloadTabs="false">
-  <ion-tab #idProducto tabIcon="water" tabTitle="Productos" [root]="productoPage" (ionSelect)="onProductoPage()" ></ion-tab>
-  <ion-tab #idPedido tabIcon="water" tabTitle="Pedidos" [root]="bPedidoPage" (ionSelect)="onbPedidoPage()" ></ion-tab>
-  <ion-tab #idEnvio tabIcon="water" tabTitle="Entregas" [root]="cEnvioPage" (ionSelect)="oncEnvioPage()" ></ion-tab>
-  <ion-tab #idRecibido tabIcon="water" tabTitle="Llegadas" [root]="eRecibidoPage" (ionSelect)="oneRecibidoPage()" ></ion-tab>
+  <ion-tab #idProducto tabIcon="cube" tabTitle="Productos" [root]="productoPage" (ionSelect)="onProductoPage()" ></ion-tab>
+  <ion-tab #idPedido tabIcon="paper" tabTitle="Pedidos" [root]="bPedidoPage" (ionSelect)="onbPedidoPage()" ></ion-tab>
+  <ion-tab #idEnvio tabIcon="appstore" tabTitle="Entregas" [root]="cEnvioPage" (ionSelect)="oncEnvioPage()" ></ion-tab>
+  <ion-tab #idRecibido tabIcon="archive" tabTitle="Llegadas" [root]="eRecibidoPage" (ionSelect)="oneRecibidoPage()" ></ion-tab>
   <!--ion-tab #idSolicitudDestino tabIcon="water" tabTitle="Sol. Ver" [root]="dSolicitudDestinoPage" (ionSelect)="ondSolicitudDestinoPage()" ></ion-tab-->
-  <ion-tab #idDisco tabIcon="water" tabTitle="Discos" [root]="discoPage" (ionSelect)="onDiscoPage()" ></ion-tab>
+  <ion-tab #idDisco tabIcon="cloud-download" tabTitle="Discos" [root]="discoPage" (ionSelect)="onDiscoPage()" ></ion-tab>
 </ion-tabs>
 
 
 <ion-tabs *ngIf="getTipo()!='ALMACEN'" tabsPlacement="bottom" [color]="storageService.getAccesoResponse().tipo=='SUCURSAL'?'primary':'cafe-claro'" preloadTabs="false">
   <!--ion-tab #idSolicitud tabIcon="water" tabTitle="Solicitud" [root]="dSolicitudPage" (ionSelect)="ondSolicitudPage()" ></ion-tab-->
-  <ion-tab #idEnvio tabIcon="water" tabTitle="Entregas" [root]="cEnvioPage" (ionSelect)="oncEnvioPage()" ></ion-tab>
-  <ion-tab #idRecibido tabIcon="water" tabTitle="Llegadas" [root]="eRecibidoPage" (ionSelect)="oneRecibidoPage()" ></ion-tab>
+  <ion-tab #idEnvio tabIcon="appstore" tabTitle="Entregas" [root]="cEnvioPage" (ionSelect)="oncEnvioPage()" ></ion-tab>
+  <ion-tab #idRecibido tabIcon="archive" tabTitle="Llegadas" [root]="eRecibidoPage" (ionSelect)="oneRecibidoPage()" ></ion-tab>
   <!--ion-tab #idVenta tabIcon="water" tabTitle="Venta" [root]="fVentaPage" (ionSelect)="onfVentaPage()" ></ion-tab-->
-  <ion-tab #idBorrador tabIcon="water" tabTitle="Venta" [root]="gBorradorPage" (ionSelect)="ongBorradorPage()" ></ion-tab>
-  <ion-tab #idAgrupador tabIcon="water" tabTitle="Agrupador" [root]="hAgrupadorPage" (ionSelect)="onhAgrupadorPage()" ></ion-tab>
-  <ion-tab #idDisco tabIcon="water" tabTitle="Discos" [root]="discoPage" (ionSelect)="onDiscoPage()" ></ion-tab>
+  <ion-tab #idBorrador tabIcon="cash" tabTitle="Venta" [root]="gBorradorPage" (ionSelect)="ongBorradorPage()" ></ion-tab>
+  <ion-tab #idAgrupador tabIcon="filing" tabTitle="Agrupador" [root]="hAgrupadorPage" (ionSelect)="onhAgrupadorPage()" ></ion-tab>
+  <ion-tab #idDisco tabIcon="cloud-download" tabTitle="Discos" [root]="discoPage" (ionSelect)="onDiscoPage()" ></ion-tab>
 </ion-tabs>
