--- a/src/pages/sistema/transaccion/a-transaccion/a-transaccion.html
+++ b/src/pages/sistema/transaccion/a-transaccion/a-transaccion.html
@@ -108,6 +108,13 @@
                                        disabled="true"></ion-input>
                     </ion-item>
             </ion-col>
+            <ion-col>
+                <ion-item>
+                    <ion-label stacked>{{ 'Saldo por Cancelar ' }} </ion-label>
+                    <ion-label stacked>{{ '10.50' }} </ion-label>
+                    <button ion-button clear item-end>add</button>
+                  </ion-item>
+            </ion-col>
         </ion-row>
 
         <quest #producto 
