Estado de cuentas 2da parte en desarrollo

--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -3,7 +3,7 @@
   <ion-tab #idPedido tabIcon="paper" tabTitle="Pedidos" [root]="bPedidoPage" (ionSelect)="onbPedidoPage()" ></ion-tab>
   <ion-tab #idEnvio tabIcon="appstore" tabTitle="Entregas" [root]="cEnvioPage" (ionSelect)="oncEnvioPage()" ></ion-tab>
   <ion-tab #idRecibido tabIcon="archive" tabTitle="Llegadas" [root]="eRecibidoPage" (ionSelect)="oneRecibidoPage()" ></ion-tab>
-  <ion-tab #idEstadoDeCuentas tabIcon="paper"  tabTitle="Est. de Cuentas" [root]="iEstadoDeCuentasPage" (ionSelect)="oniEstadoDeCuentasPage()" ></ion-tab>
+  <ion-tab #idEstadoDeCuentas tabIcon="paper"  tabTitle="Est. de Ctas" [root]="iEstadoDeCuentasPage" (ionSelect)="oniEstadoDeCuentasPage()" ></ion-tab>
   <!--ion-tab #idSolicitudDestino tabIcon="water" tabTitle="Sol. Ver" [root]="dSolicitudDestinoPage" (ionSelect)="ondSolicitudDestinoPage()" ></ion-tab-->
   <ion-tab #idDisco tabIcon="cloud-download" tabTitle="Discos" [root]="discoPage" (ionSelect)="onDiscoPage()" ></ion-tab>
 </ion-tabs>
