--- a/src/pages/acceso/acceso.html
+++ b/src/pages/acceso/acceso.html
@@ -13,7 +13,8 @@
                          accesskey="u" 
                          autofocus 
                          type="text" 
-                         required="true"></ion-input>
+                         required="true"
+                         (keyup.enter)="onAcceso()"></ion-input>
             </ion-item>
       
             <ion-item color="cafe-claro">
