--- a/src/pages/sistema/transaccion/a-pago/a-pago.html
+++ b/src/pages/sistema/transaccion/a-pago/a-pago.html
@@ -31,6 +31,9 @@
 <ion-content>
 
 <div class="content">
+        <!-- Formulario de registro de pagos -->
+
+        <!-- Lista de Pagos registrados-->
         <p-table  *ngIf="pagoResponse!=null" [value]="pagoResponse.list">
             <ng-template pTemplate="header">
                 <tr>
